objects/Detailed_Cust_Ledg_Entry__c/Detailed_Cust_Ledg_Entry__c.object-meta.xml
<CustomObject>
    <label>Detailed Cust. Ledg. Entry</label>
    <nameField>
        <label>Entry No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detailed Cust. Ledg. Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>