objects/Detailed_Cust_Ledg_Entry__c/fields/Applied_Cust_Ledger_Entry_No__c.field-meta.xml
<CustomField>
    <fullName>Applied_Cust_Ledger_Entry_No__c</fullName>
    <label>Applied Cust. Ledger Entry No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>