objects/Detailed_Cust_Ledg_Entry__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Detailed Cust. Ledg. Entries</relationshipLabel>
    <relationshipName>Detailed_Cust_Ledg_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>