objects/Detailed_Cust_Ledg_Entry__c/fields/Customer_Ledger_Entry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ledger_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Ledger Entry</label>
    <referenceTo>Customer_Ledger_Entry__c</referenceTo>
    <relationshipLabel>Detailed Cust. Ledg. Entries</relationshipLabel>
    <relationshipName>Detailed_Cust_Ledg_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>