objects/Detailed_Cust_Ledg_Entry__c/fields/Customer_Posting_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Posting_Group__c</fullName>
    <label>Customer Posting Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>