objects/Detailed_Cust_Ledg_Entry__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>