objects/Detailed_Cust_Ledg_Entry__c/fields/Initial_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Document_Type__c</fullName>
    <label>Initial Document Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>