objects/Detailed_Cust_Ledg_Entry__c/fields/Initial_Entry_Global_Dim_1__c.field-meta.xml
<CustomField>
    <fullName>Initial_Entry_Global_Dim_1__c</fullName>
    <label>Initial Entry Global Dim. 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>