objects/Detailed_Cust_Ledg_Entry__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Detailed Cust. Ledg. Entries</relationshipLabel>
    <relationshipName>Detailed_Cust_Ledg_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>