objects/Detailed_Cust_Ledg_Entry__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>Detailed Cust. Ledg. Entries</relationshipLabel>
    <relationshipName>Detailed_Cust_Ledg_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>