objects/Detailed_Cust_Ledg_Entry__c/fields/Unapplied__c.field-meta.xml
<CustomField>
    <fullName>Unapplied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unapplied</label>
    <type>Checkbox</type>
</CustomField>