objects/Detailed_Cust_Ledg_Entry__c/fields/Unapplied_by_Entry_No__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_by_Entry_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unapplied by Entry No.</label>
    <referenceTo>Detailed_Cust_Ledg_Entry__c</referenceTo>
    <relationshipLabel>Detailed Cust. Ledg. Entries</relationshipLabel>
    <relationshipName>Detailed_Cust_Ledg_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>