objects/Detailed_Cust_Ledg_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entry_Type__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_No__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Customer__c</columns>
    <columns>Amount__c</columns>
    <columns>Credit_Amount__c</columns>
    <columns>Debit_Amount__c</columns>
    <columns>Applied_Cust_Ledger_Entry_No__c</columns>
    <columns>Customer_Ledger_Entry__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>